--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
+    "deploy": "gh-pages -d dist",
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
     "@types/node": "^18",
     "autoprefixer": "^10.4.14",
+    "gh-pages": "^5.0.0",
     "nuxt": "^3.5.0",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2"
@@ -18,6 +20,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.13",
     "@heroicons/vue": "^2.0.18",
-    "@vue-hero-icons/outline": "^1.7.2"
+    "@vue-hero-icons/outline": "^1.7.2",
+    "firebase-tools": "^12.1.0"
   }
 }
