Move nojekyll file to public dir

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "deploy": "gh-pages -d dist",
+    "deploy": "gh-pages -d dist -t true",
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
