--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxt/image-edge": "1.0.0-28059208.2abef1b",
     "@nuxtjs/i18n": "8.0.0-beta.12",
     "@types/node": "^18",
     "autoprefixer": "^10.4.14",
