--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "deploy": "gh-pages -d dist -t true",
+    "deploy": "npm run generate && gh-pages -d .output/public -t true",
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
