--- a/package.json
+++ b/package.json
@@ -28,7 +28,14 @@
   },
   "pnpm": {
     "overrides": {
-      "glob@>=10.2.0 <10.5.0": ">=10.5.0"
+      "glob@>=10.2.0 <10.5.0": ">=10.5.0",
+      "qs@<6.14.1": ">=6.14.1",
+      "@modelcontextprotocol/sdk@<1.25.2": ">=1.25.2",
+      "diff@<8.0.3": ">=8.0.3",
+      "devalue@>=5.1.0 <5.6.2": ">=5.6.2",
+      "h3@<=1.15.4": ">=1.15.5",
+      "devalue@>=5.3.0 <=5.6.1": ">=5.6.2",
+      "tar@<=7.5.2": ">=7.5.3"
     }
   }
 }
